samples/_failures_safe/1761462093_dc5acf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_383809b0.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_383809b0.c:168:9: error: expected expression at end of input
  168 |         for (int i =
      |         ^~~
./samples/SAFE/__tmp_383809b0.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_383809b0.c:168:9: error: expected declaration or statement at end of input
